--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <title>Me</title>
     <meta charset="UTF-8">
+	<link rel="stylesheet" href=".\css\activity2.css">
   </head>
 
   <body>
 	<div id="wrapper">
+	<div id="container">
     <h1>Hello!</h1>
-	<section>
+	<section id="main">
 		<img src=".\img\selfie.jpg" alt="Picture of myself taken at an amusement park during summer 2021" width="10%" height="10%">
 		<p>My name is Ben. I'm an engineer-turned-IT professional who is looking to expand my skillset. I graduated from the University of Nebraska-Lincoln with a degree in mechanical engineering. After a few years of working, I decided to change my career path and goals and got a job doing IT things ranging from help desk to configuring networking switches and servers.</p>
 		<br>
@@ -16,7 +18,17 @@
 		<a href=".\pcgames.html">PC games</a>
 		<a href=".\boardgames.html">Board games</a>
 		<a href=".\coasters.html">Roller coasters<a>
-		</section>
+	</section>
+		
+	<footer>
+		<ul>
+			<li><a href=".\index.html">&nbsp;Home&nbsp;</a></li> 
+			<li><a href=".\boardgames.html">&nbsp;Board Games&nbsp;</a></li> 
+			<li><a href=".\coasters.html">&nbsp;Roller Coasters&nbsp;</a></li> 
+			<li><a href=".\pcgames.html">&nbsp;PC Games&nbsp;</a></li>
+		</ul>
+	</footer>
+	</div>
 	</div>
   </body>
 </html>
