Updated page content
Updated page content and CSS file

--- a/boardgames.html
+++ b/boardgames.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Me</title>
+    <title>My board games</title>
     <meta charset="UTF-8">
 	<link rel="stylesheet" href=".\css\activity2.css">
   </head>
@@ -9,15 +9,19 @@
   <body>
 	<div id="wrapper">
 	<div id="container">
-    <h1>Roller coasters</h1>
+    <h1>Board Games</h1>
 	<section id="main">
-		<img src=".\img\selfie.jpg" alt="Picture of myself taken at an amusement park during summer 2021" width="10%" height="10%">
-		<p>I've grown up with a fondness for roller coasters. Here are few pictures of some favorites. </p>
-		<br>
-		<img src=".\img\boardgames\ti4.jpg" alt="Twilight Imperium 4th Edition" width="10%" height="10%">
-		<img src=".\img\boardgames\tmars.jpg" alt="Terraforming Mars" width="10%" height="10%">
-		<img src=".\img\boardgames\gaia.png" alt="Gaia Project" width="10%" height="10%">
-		</section>
+		<p id="ti4">
+		<img src=".\img\boardgames\ti4.jpg" alt="Twilight Imperium 4th Edition">
+		Twilight Imperium: 4th Edition is my favorite board game. It involves exploration, conquest, politics, and trade all wrapped into one massive experience that can last a full day.<br><br>
+		<a href="https://boardgamegeek.com/boardgame/233078/twilight-imperium-fourth-edition">Click here</a> for more information about Twilight Imperium.</p>
+		<p id="tmars"><img src=".\img\boardgames\tmars.jpg" alt="Terraforming Mars">
+		Terraforming Mars is a great science-themed game about terraforming Mars (obviously). Your goal, along with the other players, is to raise the planet's temperature, oxygen level, and water content to earth-like levels while building your personal corporation to be the most prestigious and profitable.<br><br>
+		<a href="https://boardgamegeek.com/boardgame/167791/terraforming-mars">Click here</a> for more information about Terraforming Mars.</p><br>
+		<p id="gaia"><img src=".\img\boardgames\gaia.png" alt="Gaia Project">
+		Gaia Project is a recent favorite of mine. In this game, you compete against the other players to spread your race across the galaxy and form massive federations as fast as possible. To do this you must construct buildings to generate resources and money while researching advanced technologies to gain an edge over your opponents.<br><br>
+		<a href="https://boardgamegeek.com/boardgame/220308/gaia-project">Click here</a> for more information about Gaia Project.</p>
+	</section>
 	<footer>
 		<ul>
 			<li><a href=".\index.html">&nbsp;Home&nbsp;</a></li> 
