--- a/coasters.html
+++ b/coasters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Me</title>
+    <title>My coasters</title>
     <meta charset="UTF-8">
 	<link rel="stylesheet" href=".\css\activity2.css">
   </head>
@@ -9,15 +9,19 @@
   <body>
 	<div id="wrapper">
 	<div id="container">
-    <h1>Roller coasters</h1>
+    <h1>Roller Coasters</h1>
 	<section id="main">
-		<img src=".\img\selfie.jpg" alt="Picture of myself taken at an amusement park during summer 2021" width="10%" height="10%">
-		<p>I've grown up with a fondness for roller coasters. Here are few pictures of some favorites. </p>
-		<br>
-		<img src=".\img\coasters\eltoro.jpg" alt="Picture of El Toro at Six Flags Great Adventure in Jackson, New Jersey" width="10%" height="10%">
-		<img src=".\img\coasters\ttd.jpg" alt="Picture of Top Thrill Dragster at Cedar Point in Sandusky, Ohio" width="10%" height="10%">
-		<img src=".\img\coasters\pheonix.jpg" alt="Picture of Pheonix at Knoebels in Elysburg, Pennsylvania" width="10%" height="10%">
-		</section>
+		<p id="eltoro">
+		<img src=".\img\coasters\eltoro.jpg" alt="Picture of El Toro at Six Flags Great Adventure in Jackson, New Jersey">
+		El Toro is a wooden roller coaster at Six Flags Great Adventure in Jackson, New Jersey. It is one of the largest and most aggressive wooden coasters in the world, standing 181 feet tall and reaching 70 mph with a 76° first drop.<br><br>
+		<a href="https://www.sixflags.com/greatadventure/attractions/el-toro">Click here</a> for more information about El Toro.</p><br>
+		<p id="tmars"><img src=".\img\coasters\ttd.jpg" alt="Picture of Top Thrill Dragster at Cedar Point in Sandusky, Ohio">
+		Top Thrill Dragster opened as the world's tallest and fastest coaster in 2003. It stands 420 feet tall and launches riders to a speed of 120 mph within about 4 seconds. While its height and speed records have been surpassed, the ride is no less forceful and exciting. Even though it is only 20 seconds long, the experience and theming of the ride make it stand out.<br><br>
+		<a href="https://www.cedarpoint.com/rides-experiences/top-thrill-dragster">Click here</a> for more information about Top Thrill Dragster.</p><br><br><br><br>
+		<p id="gaia"><img src=".\img\coasters\pheonix.jpg" alt="Picture of Pheonix at Knoebels in Elysburg, Pennsylvania">
+		Pheonix is a classic wooden coaster that proves it doesn't need to be the biggest or tallest to be one of the best. This coaster stands only 78 feet tall and goes only 45 mph, but its quick hills provide unexpected aggressiveness. Originally built in San Antonio in 1947, this ride was moved to its current location piece-by-piece in 1985 and continues to operate in great condition.<br><br>
+		<a href="https://www.knoebels.com/rides/phoenix">Click here</a> for more information about Pheonix.</p><br>
+	</section>
 	<footer>
 		<ul>
 			<li><a href=".\index.html">&nbsp;Home&nbsp;</a></li> 
