--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 	<section id="main">
 		<img src=".\img\selfie.jpg" alt="Picture of myself taken at an amusement park during summer 2021" width="10%" height="10%">
 		<p>My name is Ben. I'm an engineer-turned-IT professional who is looking to expand my skillset. I graduated from the University of Nebraska-Lincoln with a degree in mechanical engineering. After a few years of working, I decided to change my career path and goals and got a job doing IT things ranging from help desk to configuring networking switches and servers.</p>
-		<br>
-		<p>My main hobbies are PC gaming, board gaming, and riding roller coasters. Click one of the links below to view some of my favorites of each of these.</p>
-		<a href=".\pcgames.html">PC games</a>
-		<a href=".\boardgames.html">Board games</a>
-		<a href=".\coasters.html">Roller coasters<a>
+		<p>My main hobbies are PC gaming, board gaming, and riding roller coasters. Click the links at the bottom of the page to view some of my favorites of each of these.</p>
 	</section>
 		
 	<footer>
