--- a/pcgames.html
+++ b/pcgames.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Me</title>
+    <title>My PC games</title>
     <meta charset="UTF-8">
 	<link rel="stylesheet" href=".\css\activity2.css">
   </head>
@@ -9,14 +9,17 @@
   <body>
 	<div id="wrapper">
 	<div id="container">
-    <h1>Roller coasters</h1>
+    <h1>PC Games</h1>
 	<section id="main">
-		<img src=".\img\selfie.jpg" alt="Picture of myself taken at an amusement park during summer 2021" width="10%" height="10%">
-		<p>I've grown up with a fondness for roller coasters. Here are few pictures of some favorites. </p>
-		<br>
-		<img src=".\img\pcgames\crosscode.jpg" alt="Crosscode" width="10%" height="10%">
-		<img src=".\img\pcgames\portal2.jpg" alt="Portal 2" width="10%" height="10%">
-		<img src=".\img\pcgames\rct.jpg" alt="Roller Coaster Tycoon" width="10%" height="10%">
+		<p id="ti4">
+		<img src=".\img\pcgames\crosscode.jpg" alt="Crosscode">
+		Crosscode was one of my favorite games released in the last few years. It is a retro-inspired 2D Action RPG inspired by games like the Legend of Zelda series. The player controls a characcter logging into an MMO set in the distant future.<br><br>
+		<a href="http://cross-code.com/en/home">Click here</a> for more information about Crosscode.</p>
+		<p id="tmars"><img src=".\img\pcgames\portal2.jpg" alt="Portal 2">
+		The Portal series by Valve features great puzzles the player solves using a "portal gun." Players navigate the level by using the gun to place portals in strategic locations.<br><br>
+		<a href="https://www.thinkwithportals.com/">Click here</a> for more information about Portal 2.</p><br><br><br><br><br><br><br>
+		<p id="gaia"><img src=".\img\pcgames\rct.jpg" alt="RollerCoaster Tycoon">
+		The <a href="https://www.rollercoastertycoon.com/rollercoaster-tycoon-2-triple-thrill-pack/">RollerCoaster Tycoon</a> series was one of my first games played when I was young. I've likely spent thousands of hours playing through each game in the series. These games definitely spawned my fascination with roller coasters, which later inspired me to pursue engineering.<br><br>
 	</section>
 	<footer>
 		<ul>
