--- a/pcgames.html
+++ b/pcgames.html
@@ -13,11 +13,9 @@
 	<section id="main">
 		<p id="ti4">
 		<img src=".\img\pcgames\crosscode.jpg" alt="Crosscode">
-		Crosscode was one of my favorite games released in the last few years. It is a retro-inspired 2D Action RPG inspired by games like the Legend of Zelda series. The player controls a characcter logging into an MMO set in the distant future.<br><br>
-		<a href="http://cross-code.com/en/home">Click here</a> for more information about Crosscode.</p>
+		<a href="http://cross-code.com/en/home">Crosscode</a> was one of my favorite games released in the last few years. It is a retro-inspired 2D Action RPG inspired by games like the Legend of Zelda series. The player controls a characcter logging into an MMO set in the distant future.<br><br>
 		<p id="tmars"><img src=".\img\pcgames\portal2.jpg" alt="Portal 2">
-		The Portal series by Valve features great puzzles the player solves using a "portal gun." Players navigate the level by using the gun to place portals in strategic locations.<br><br>
-		<a href="https://www.thinkwithportals.com/">Click here</a> for more information about Portal 2.</p><br><br><br><br><br><br><br>
+		The <a href="https://www.thinkwithportals.com/">Portal</a> series by Valve features great puzzles the player solves using a "portal gun." Players navigate the level by using the gun to place portals in strategic locations.<br><br></p><br><br><br><br><br><br><br>
 		<p id="gaia"><img src=".\img\pcgames\rct.jpg" alt="RollerCoaster Tycoon">
 		The <a href="https://www.rollercoastertycoon.com/rollercoaster-tycoon-2-triple-thrill-pack/">RollerCoaster Tycoon</a> series was one of my first games played when I was young. I've likely spent thousands of hours playing through each game in the series. These games definitely spawned my fascination with roller coasters, which later inspired me to pursue engineering.<br><br>
 	</section>
