--- a/coasters.html
+++ b/coasters.html
@@ -18,7 +18,7 @@
 		<p id="tmars"><img src=".\img\coasters\ttd.jpg" alt="Picture of Top Thrill Dragster at Cedar Point in Sandusky, Ohio">
 		Top Thrill Dragster opened as the world's tallest and fastest coaster in 2003. It stands 420 feet tall and launches riders to a speed of 120 mph within about 4 seconds. While its height and speed records have been surpassed, the ride is no less forceful and exciting. Even though it is only 20 seconds long, the experience and theming of the ride make it stand out.<br><br>
 		<a href="https://www.cedarpoint.com/rides-experiences/top-thrill-dragster">Click here</a> for more information about Top Thrill Dragster.</p><br><br><br><br>
-		<p id="gaia"><img src=".\img\coasters\pheonix.jpg" alt="Picture of Pheonix at Knoebels in Elysburg, Pennsylvania">
+		<p id="gaia"><img src=".\img\coasters\pheonix.JPG" alt="Picture of Pheonix at Knoebels in Elysburg, Pennsylvania">
 		Pheonix is a classic wooden coaster that proves it doesn't need to be the biggest or tallest to be one of the best. This coaster stands only 78 feet tall and goes only 45 mph, but its quick hills provide unexpected aggressiveness. Originally built in San Antonio in 1947, this ride was moved to its current location piece-by-piece in 1985 and continues to operate in great condition.<br><br>
 		<a href="https://www.knoebels.com/rides/phoenix">Click here</a> for more information about Pheonix.</p><br>
 	</section>
